@@ -1,0 +1,24 @@
+<?xml version="1.0"?>
+<!DOCTYPE package-info SYSTEM "http://www.simplemachines.org/xml/package-info">
+
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+	ATTENTION: If you are trying to install this manually, you should try
+	the package manager.  If it will not work for you, please take a look
+	at the following for information on this format:
+		http://mods.simplemachines.org/docs/manual-install.php
+ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
+<package-info xmlns="http://www.simplemachines.org/xml/package-info" xmlns:smf="http://www.simplemachines.org/">
+	<id>el:prettyurls-tp-ext-none</id>
+	<version>0.3</version>
+	<name>Pretty URLs - TinyPortal - Extention: none</name>
+	<type>modification</type>
+
+	<install for="1.1, 1.1.0-1.1.99">
+		<modification format="xml" type="file">Changes.xml</modification>
+	</install>
+	<uninstall for="1.1, 1.1.0-1.1.99">
+		<modification format="xml" type="file" reverse="true">Changes.xml</modification>
+	</uninstall>
+
+</package-info>
